--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
     android:textSize="25sp"
     android:textStyle="bold"
     android:layout_centerHorizontal="true"
-    android:layout_marginTop="20sp"
+    android:layout_marginTop="5dp"
     />
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/categoryTab"
