--- a/app/src/main/res/layout/parent_recyclerview_item.xml
+++ b/app/src/main/res/layout/parent_recyclerview_item.xml
@@ -11,7 +11,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginBottom="10dp"
         android:textSize="20sp"
 
         />
@@ -19,6 +18,7 @@
         android:id="@+id/childRecyclerView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
 
         />
 
