--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,14 +10,15 @@
 
 <TextView
     android:id="@+id/appName"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Movie App"
-    android:textAlignment="center"
     android:textSize="25sp"
     android:textStyle="bold"
+    android:textColor="@color/white"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="5dp"
+    android:layout_marginLeft="10dp"
     />
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/categoryTab"
@@ -77,7 +78,8 @@
         android:id="@+id/parentRecyclerView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"/>
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="10dp"/>
 
     </LinearLayout>
     </androidx.core.widget.NestedScrollView>
